Datos de contacto en mails interdesa

--- a/app/views/payment_mailer/due_payment.html.erb
+++ b/app/views/payment_mailer/due_payment.html.erb
@@ -18,7 +18,7 @@
       <p style="margin-bottom:0.28cm;line-height:108%" align="justify">Ante
       cualquier duda o inquietud, rogamos que se dirija a nuestro
       Departamento de Atención al Cliente personalmente, por teléfono al
-      011 4335-8000 o bien por correo electrónico a: <a href="mailto:atencionalcliente@interplan.com.ar" target="_blank">intimaciones@interplan.com.ar</a></p>
+      +54 (11) 4335-8018 o bien por correo electrónico a: <a href="mailto:info@interdesa.com.ar" target="_blank">info@interdesa.com.ar</a></p>
       <p style="margin-bottom:0.28cm;line-height:108%" align="justify">Muchas
       gracias.</p><div class="yj6qo"></div><div class="adL">
       </div></div>
