--- a/app/views/payment_mailer/upcoming_payment.html.erb
+++ b/app/views/payment_mailer/upcoming_payment.html.erb
@@ -103,9 +103,8 @@
                             <tr>
                               <td style="padding:0 8px" align="center" width="100%">
                                 <p style="color:#888888;margin:0">
-                                  Centro de Atención Telefónica: <span style="color:#cd2122;margin:0">(011)
-                                    4335-8000</span> </p>
-                                <p> <a href="mailto:interplan.mkt@interplan.com.ar" style="color:#cd2122;margin:0" target="_blank">interplan.mkt@interplan.com.ar</a>
+                                  Centro de Atención Telefónica: <span style="color:#cd2122;margin:0">+54 (11) 4335-8018</span> </p>
+                                <p> <a href="mailto:info@interdesa.com.ar" style="color:#cd2122;margin:0" target="_blank">info@interdesa.com.ar</a>
                                 </p>
                                 <div style="line-height:24px">&zwnj;</div>
                               </td>
