Rooms en unit y en generador automático de units. Planes de pago con fecha pasada. Filter para tipo de unit en modo dropdown. Filter para ambientes

--- a/app/views/admin/buildings/unit_generation.html.erb
+++ b/app/views/admin/buildings/unit_generation.html.erb
@@ -18,7 +18,10 @@
             <label for="ground_floor_apartments" class="label">Ground floor apartments</label>
             <input id="ground_floor_apartments" type="text" name="ground_floor_apartments" required>
           </li>
-
+          <li class="string input mandatory stringish" id="average_apartment_rooms">
+            <label for="average_apartment_rooms" class="label">Average apartment rooms</label>
+            <input id="average_apartment_rooms" type="text" name="average_apartment_rooms" required>
+          </li>
           <li class="string input mandatory stringish" id="parkings">
             <label for="parkings" class="label">Parking spots</label>
             <input id="parkings" type="text" name="parkings" required>
